# SSP_Final_Project

./: A. Summary of Findings For Fairness Indices.docx  Explanation.docx
sync_benchmark/: CMakeLists.txt  Makefile  README.md  benchmark.h  main.cpp  sync_bench
sync_benchmark/docs/: workload_methodology.md
sync_benchmark/energy/: rapl_energy.h
sync_benchmark/experiments/: contention.cpp  contention.h  experiment_runner.h  fairness.cpp  fairness.h  false_sharing.cpp  false_sharing.h  latency_dist.cpp  latency_dist.h  scalability.cpp  scalability.h  throughput_saturation.cpp  throughput_saturation.h
sync_benchmark/hardware/: numa_ht_bench.h
sync_benchmark/locks/: clh_lock.h  lock_dispatch.cpp  lock_dispatch.h  mcs_lock.h  semaphore_lock.h  spinlock.h  ticket_lock.h
sync_benchmark/mpi/: mpi_bench.h  mpi_bench_main.cpp
sync_benchmark/openmp/: openmp_bench.h
sync_benchmark/output/cpu_analysis/: cpu_only_append_test.csv  exp1_cpu_utilization.csv  platform_info.txt
sync_benchmark/output/graphs./: dashboard.html
sync_benchmark/platform/: platform_info.h
sync_benchmark/scripts/: build_exp1_cpu_only_csv.py  collect_exp5_row_perf.py  exp1_cpu_monitor.py  generate_synthetic_data.py  jain_failure_analysis.py  merge_perf_into_csv.py  plot_exp1_cpu_only.py  requirements.txt  run_exp1_cpu_only.py  visualize.py  workload_profiles.py
sync_benchmark/utils/: cpu_affinity.h  csv_writer.h  perf_counters.h  stats.h  timer.h
sync_benchmark/venv_analysis/: pyvenv.cfg
sync_benchmark/workloads/: concurrent_hash_table.h  graph_workload.h  producer_consumer.h
(+59 files in other folders)
